# Inspyr

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build  org.gnome.Inspyr.json
crates/inspyr-daemon/: Cargo.toml
crates/inspyr-daemon/src/: main.rs  watcher.rs
crates/inspyr-database/: Cargo.toml
crates/inspyr-database/src/: connection.rs  lib.rs  operation.rs  scan.rs  tables.sql
crates/inspyr-ui/: Cargo.toml  build.rs  config.rs.in  inspyr.gresource.xml
crates/inspyr-ui/src/: application.rs  image_row.rs  main.rs  photo-item.ui  photo-page.ui  photo_item.rs  photo_page.rs  window.rs  window.ui
data/: meson.build  org.gnome.Inspyr.desktop.in  org.gnome.Inspyr.gschema.xml  org.gnome.Inspyr.metainfo.xml.in  org.gnome.Inspyr.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  main.rs  meson.build  window.rs  window.ui
